# actor-registry-mcp

./: Cargo.toml  README.md  project-outline.md
changes/: final-checklist.md  flake_nix_template.txt  future-enhancement-asset-bundling.md  http-template-documentation.md  http-template-implementation-plan.md  http-template-implementation-summary.md  http_lib_rs.txt  http_wit.txt  simple_flake_nix.txt  test-http-template.sh
src/: lib.rs  main.rs
src/registry/: actor.rs  config.rs  mod.rs
src/templates/: mod.rs
src/templates/basic/: lib_rs_template.rs  mod.rs  wit_template.rs
src/templates/common/: flake_nix.rs  mod.rs
src/templates/http/: lib_rs_template.rs  mod.rs  wit_template.rs
src/tools/: build_actor.rs  create_actor.rs  generate_bindings.rs  get_actor_info.rs  get_actor_path.rs  list_actors.rs  mod.rs
src/utils/: mod.rs
templates/basic/: lib.rs
templates/common/: flake.nix
templates/http/assets/: app.js  index.html  styles.css
