[package]
name = "actor-registry-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-protocol = { path = "../../rust-mcp/mcp-protocol" }
mcp-server = { path = "../../rust-mcp/mcp-server" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
toml = "0.8"
regex = "1.10"
nix-cmd = "0.6"
