[package]
name = "actor-registry-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-protocol = {version =  "0.2.5", features = ["camel_case"] }
modelcontextprotocol-server = {version = "0.1.2", features = ["camel_case"]}
theater = { path = "../../theater" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
toml = "0.8"
regex = "1.10"
chrono = "0.4"
